<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
  <string name="app_name">憨憨机器人</string>
  <string name="username">小王</string>

  <string name="cheese_ipsum">文本</string>
  <string name="checkin">Checkin</string>

  <string name="menu_night_mode">语言</string>
  <string name="menu_night_mode_system">跟随系统设置</string>
  <string name="menu_night_mode_day">中文(always)</string>
  <string name="menu_night_mode_night">english(always)</string>
  <string name="menu_night_mode_auto">自动</string>
  <string name="password">密码</string>
  <string name="email">邮箱</string>
  <string name="login">登陆</string>
  <string name="SignupTip">还未注册？点击注册</string>
  <string name="address">家庭住址</string>
  <string name="location">地址</string>
  <string name="mobile_number">电话号码</string>
  <string name="re_enter_password">再次输入密码</string>
  <string name="create_account">创建账号</string>
  <string name="already_a_member_login">已注册？点我登陆</string>
  <string name="Lesson1">第一课</string>
  <string name="Lesson2">第二课</string>
  <string name="Lesson3">第三课</string>
  <string name="sub_chinese">语文</string>
  <string name="sub_math">数学</string>
  <string name="sub_english">英语</string>
  <string name="english">English</string>
  <string name="chinese">中文</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="goin">进入</string>
  <string name="stop">停止</string>
    <string name="tm">请判断正误</string>
  <string name="yes">正确</string>
  <string name="no">错误</string>

</resources>
